# MRT

./: Assignment 1.py
Assignments/Assignment 1/: Assignment 1.py
Assignments/Assignment 2/mrt_ws/install/: local_setup.sh  setup.sh
Assignments/Assignment 2/mrt_ws/install/nirav_assn2/lib/nirav_assn2/: basestation  d_rover1  d_rover2  d_rover3  d_rover4
Assignments/Assignment 2/mrt_ws/install/nirav_assn2/share/nirav_assn2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Assignments/Assignment 2/mrt_ws/log/: latest_build  latest_test
Assignments/Assignment 2/mrt_ws/src/nirav_assn2/: CMakeLists.txt  all_nodes.launch.py  package.xml  setup.cfg  setup.py
Assignments/Assignment 2/mrt_ws/src/nirav_assn2/src/: basestation.py
